# Auto-update-GitHub

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  FUNDING.yml  LICENSE  README.md  SECURITY.md  SUPPORT.md  daily-report.md  deploy.ps1  deploy.sh  pyproject.toml  requirements.txt  test-trigger.md  trigger-workflow.md
.github/workflows/: auto-update.yml
config/: environment.example  project_config.json  timezone_config.py
data/: update_history.json
scripts/: demo.py  final_check.py  generate_report.py  run_tests.py  setup_project.py  test_local.py  validate_project.py
tests/: README.md  __init__.py  test_config.py  test_generate_report.py
